# exchange-collection

./: .gitignore  .openapi-generator-ignore  Cargo.toml  LICENSE  README.md  binance_2.yml  example_2.yml  generate.py  generate_model.py  hyperliquid_openapi.yaml  index.html  kraken_3.yml  set of rules.md
.github/workflows/: code_generation.yml  generate-rust-code.yml
asset/: binance_rest_openapi.yaml  binance_ws_asyncapi.yaml  bitget_rest_openapi.yaml  bitget_ws_asyncapi.yaml  bitwyre_rest_openapi.yaml  bitwyre_ws_asyncapi.yaml  bybit_rest_openapi.yaml  ccxtrest_rest_openapi.yaml  coinbase_openapi.yaml  coinbase_rest_openapi.yaml  coinbase_ws_asyncapi.yaml  coincheck_rest_openapi.yaml  coincheck_ws_asyncapi.yaml  hashkey_rest_openapi.yaml  hashkey_ws_asyncapi.yaml  hyperliquid_openapi.yaml  hyperliquid_rest_openapi.yaml  hyperliquid_ws_asyncapi.yaml  krakenfutures_rest_asynapi.yaml  krakenfutures_rest_openapi.yaml  krakenfutures_ws_asyncapi.yaml  mexc_rest_openapi.yaml  mexc_ws_asyncapi.yaml  okx_rest_openapi.yaml  okx_ws_asyncapi.yaml
codegen/: CHANGELOG.md  Cargo.toml  README.md  binance_ws_asyncapi.yaml
codegen/src/: lib.rs  main.rs
codegen/src/meta/: cli.rs  input.rs  mod.rs  output.rs
config/: codegen_openapi.json
script/: generate_model.py  requirements.txt  test.py
