[workspace]
resolver = "2"
members = [
    # code generator
    "codegen",
    # generated rust `exchange-collection` crate, only enable after codegen for sanity check.
    # "target/rust",
    # "target/rust/src/binance/src/rest",
]

[workspace.dependencies]
cargo_toml = "0.20.4"
clap = { version = "4.5.16", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.209", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0.127"
serde_yaml = "0.9.34+deprecated"
strum = "0.26.3"
strum_macros = "0.26.3"
toml = "0.8.19"
url = "2.5.2"
reqwest = "0.12.7"
