[workspace]
resolver = "2"
members = [
    # code generator
    "codegen",
    # generated rust `exchange-collection` crate, only enable after codegen for sanity check.
    # "target/rust",
]

[workspace.dependencies]
cargo_toml = "0.21.0"
clap = { version = "4.5.25", features = ["derive"] }
eyre = "0.6.12"
indicatif = "0.17"
serde = { version = "1.0.217", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0.138"
serde_yaml = "0.9.33"
strum = "0.27.0"
strum_macros = "0.27.0"
toml = "0.8.20"
url = "2.5.4"
reqwest = "0.12.12"
