[package]
name = "exchange-collection-codegen"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
cargo_toml.workspace = true
clap.workspace = true
eyre.workspace = true
serde.workspace = true
serde_yaml.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
