[package]
name = "exchange-collection-codegen"
version = "0.2.1"
edition = "2021"

[lib]

[dependencies]
cargo_toml.workspace = true
clap.workspace = true
eyre.workspace = true
indicatif.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_yaml.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
